--- a/app/views/homes/top.html.slim
+++ b/app/views/homes/top.html.slim
@@ -1,6 +1,6 @@
 = javascript_pack_tag 'homes/top'
 
-.mx-auto.text-center.text-white
+.container.pt-5.px-5.top-image
   h1 LINEカプセル
   = image_tag 'users/default.png', id: 'picture', class: 'w-20 h-20 rounded-full inline-flex items-center justify-center border border-gray-500', style: "width: 150px;"
   h2#name.font-medium.title-font.mt-2.text-gray-900.text-xl
