--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title
-      | LineCapsule
+      = t('defaults.app_name')
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     script[charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"]
     = csrf_meta_tags
@@ -16,4 +16,6 @@ html
   body
     .mb-auto
       = render 'shared/header'
-    = yield
+    .wrapper
+      = yield
+    = render 'shared/footer'
