--- a/app/views/homes/start.html.slim
+++ b/app/views/homes/start.html.slim
@@ -1,13 +1,13 @@
 section.container.mx-auto.py-5
   .text-center.py-1
     p.mb-1
-      = t('homes.top.app_detail')
+      = t('homes.start.app_detail')
     h1.title-font
       = t('defaults.app_name')
 section.bg-light.py-5
   .text-center.py-1.text-secondary
     h3.title-font
-      = t('homes.top.section.first')
+      = t('homes.start.section.first')
     h4.title-font ↓↓
     .my-3
       a href='https://lin.ee/7nsoaaw'
@@ -18,8 +18,8 @@ section.bg-light.py-5
 section.mx-auto.py-5
   .text-center.py-1
     h3.title-font
-      = t('homes.top.section.second')
+      = t('homes.start.section.second')
 section.mx-auto.py-5
   .text-center.py-1
     h3.title-font
-      = t('homes.top.section.third')
+      = t('homes.start.section.third')
