--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,14 +8,14 @@ html
     = csrf_meta_tags
     = csp_meta_tag
     = Gon::Base.render_data
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all'
+    = javascript_pack_tag 'application'
     script crossorigin="anonymous" src="https://kit.fontawesome.com/e1d6c1fcca.js"
     script crossorigin="anonymous" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" type="text/javascript"
   body
-    .mb-auto
-      = render 'shared/header'
-    .wrapper
+    - if current_user.nil?
       = yield
-    = render 'shared/footer'
+    - else
+      = yield
+      = render 'shared/after_login_footer'
