--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,10 +1,10 @@
-nav.navbar.navbar-dark.fixed-top
+nav.navbar.navbar-dark.fixed-top.ps-3
   = link_to root_path, class: 'navbar-brand'
     span.nav-title
       = t('defaults.app_name')
   button.navbar-toggler.me-3 type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
     span.navbar-toggler-icon
-  .collapse.navbar-collapse id='navbarSupportedContent'
+  .collapse.navbar-collapse.px-3 id='navbarSupportedContent'
     ul.navbar-nav.me-auto.mb-2
       li.nav-item.my-1
         = link_to root_path, class: 'nav-link d-flex justify-content-end'
@@ -18,7 +18,3 @@ nav.navbar.navbar-dark.fixed-top
       li.nav-item.my-1
         = link_to root_path, class: 'nav-link d-flex justify-content-end'
           = t('defaults.policy')
-    div.d-flex.justify-content-end
-      a href='https://lin.ee/7nsoaaw'
-        button class="btn btn-outline-light my-2 mb-2 my-sm-0 nav-link" type="submit"
-          = t('defaults.line_add')
