--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
-@import"bootstrap";
+@import "bootstrap";
+@import "footer";
 
 body {
   background-color: #c2d9fe;
@@ -8,15 +9,6 @@ body {
 
 .wrapper{
   margin-top: 62px;
-}
-
-nav, footer{
-  background-color: #3683ff;
-
-  .nav-title, .navbar-toggler-icon{
-    color: white;
-    font-size: 1.5rem;
-  }
 }
 
 .navbar-dark .navbar-nav .nav-link{
