Add：トップページで「手紙」「記録」のそれぞれの情報を切り替えて表示できるように実装 #21

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,15 @@ body {
   font-size: large;
   color: white;
 }
+
+#letter-text{
+  color: black;
+}
+
+#record-text{
+  color: gray;
+}
+
+.record-field{
+  display: none;
+}
