--- a/app/views/letters/new.html.slim
+++ b/app/views/letters/new.html.slim
@@ -7,8 +7,8 @@
       = f.label :message, Letter.human_attribute_name(:message), class: 'mb-2'
       = f.text_area :message, autofocus: true, class: "form-control", rows: 15
     .form-group.mb-3
-      = f.label :dig_notice, Letter.human_attribute_name(:dig_notice), class: 'mb-2'
+      = f.label :send_at, Letter.human_attribute_name(:send_at), class: 'mb-2'
       br
-      = raw sprintf(f.date_select(:dig_notice, prompt: "--", use_month_numbers: true, start_year: Date.today.year, end_year: (Date.today >> 12).year, date_separator: '%s'),'年','月')+'日'
+      = raw sprintf(f.date_select(:send_at, prompt: "--", use_month_numbers: true, start_year: Date.today.year, end_year: (Date.today >> 12).year, date_separator: '%s'),'年','月')+'日'
     .action.mb-5
       = f.submit '作成', class: 'btn btn-outline-light'
