--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -18,11 +18,11 @@
         p.text-dark= t('users.show.letter_unit', count: @letters.count)
       .d-flex.justify-content-evenly.px-3.mb-3.text-center.small
         .w-80
-          p.mb-0= t('users.show.not_already_letter')
-          p.text-dark= t('users.show.letter_unit', count: 1)
+          p.mb-0= t('users.show.sent_letter')
+          p.text-dark= t('users.show.letter_unit', count: @letters.sent.count)
         .w-80
-          p.mb-0= t('users.show.already_letter')
-          p.text-dark= t('users.show.letter_unit', count: 3)
+          p.mb-0= t('users.show.not_sent_letter')
+          p.text-dark= t('users.show.letter_unit', count: @letters.not_sent.count)
     .record-field
       .text-center.small
         p.mb-0= t('users.show.count')
