Add：記録一覧から詳細への遷移を実装・ヘッダーに切り替えメニューを設け、一覧と作成を見やすく実装 #23

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 // @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "footer";
+@import "header_footer";
 
 body {
   background-color: #c2d9fe;
@@ -10,7 +10,7 @@ body {
 }
 
 .wrapper{
-  margin-top: 62px;
+  margin: 62px 0px;
 }
 
 .navbar-dark .navbar-nav .nav-link{
@@ -28,4 +28,13 @@ body {
 
 .record-field{
   display: none;
+}
+
+.link{
+  opacity: 0.7;
+}
+
+.link:hover{
+  opacity: 1;
+  text-decoration: underline;
 }
