--- a/app/views/records/index.html.slim
+++ b/app/views/records/index.html.slim
@@ -1,5 +1,4 @@
-.container.mx-auto.py-4
-  .text-center.py-1
-    h3.mb-3
-      = t('records.index.title')
-  = render @records
+= render 'shared/record_menu'
+.wrapper
+  .container.mx-auto.py-4
+    = render @records
