--- a/app/views/shared/_after_login_footer.html.slim
+++ b/app/views/shared/_after_login_footer.html.slim
@@ -4,5 +4,5 @@ footer.fixed-bottom
       p.d-inline-block.small.mb-0= t('shared.footer.profile')
     = link_to new_letter_path, class: "w-100 text-center py-4 #{footer_menu('letters')}"
       p.d-inline-block.small.mb-0= t('shared.footer.letter')
-    = link_to new_record_path, class: "w-100 text-center py-4 #{footer_menu('records')}"
+    = link_to records_path, class: "w-100 text-center py-4 #{footer_menu('records')}"
       p.d-inline-block.small.mb-0= t('shared.footer.record')
