--- a/app/views/records/show.html.slim
+++ b/app/views/records/show.html.slim
@@ -1,9 +1,12 @@
-.container.mx-auto.py-5
-  .text-center.py-1
-    h4.mb-3
-      = @record.theme
-  .text-left.mx-3
-    p.text-light.my-2= t('records.show.date')
-    p.px-4= @record.created_at.strftime("%Y年 %-m月 %-d日")
-    p.text-light.my-2= t('records.show.content')
-    p.px-4= safe_join(@record.content.split("\n"),tag(:br))
+.container.mx-auto{ style= "margin-bottom: 62px" }
+  i.fa.fa-backward.mt-3.ms-2.me-2.text-light
+  = link_to records_path
+    span.d-inline-block.link{ style= "color: white" }= t('records.show.back')
+  .py-2
+    .py-1.px-3
+      h4.mb-3= safe_join(@record.theme.split("\n"),tag(:br))
+    .text-left.mx-2
+      p.text-light.my-2= t('records.show.date')
+      p.px-4= @record.created_at.strftime("%Y年 %-m月 %-d日")
+      p.text-light.my-2= t('records.show.content')
+      p.px-4= safe_join(@record.content.split("\n"),tag(:br))
