--- a/app/views/records/_record.html.slim
+++ b/app/views/records/_record.html.slim
@@ -2,7 +2,7 @@
 
 .bg-white.mb-3.p-3.rounded-3{ style= "position: relative" }
   .dropdown-content.mt-4.me-3.py-2.px-4.border.border-1.border-dark.rounded-2{ id= "#{record.id}" }
-    = link_to '削除', record_path(record), class: "text-dark", data: {method: :delete, confirm: '削除しても良いですか？'}
+    = link_to t('records.index.delete'), record_path(record), class: "text-dark", data: {method: :delete, confirm: t('records.index.delete_confirm')}
   .d-flex.justify-content-between.px-1.text-muted
     p.mb-1.small= record.created_at.strftime("%Y年 %-m月 %-d日")
     .dropdown{ id= "#{record.id}" }
