--- a/app/views/records/show.html.slim
+++ b/app/views/records/show.html.slim
@@ -3,14 +3,13 @@
 .container.mx-auto{ style= "margin-bottom: 62px; position: relative;" }
   .dropdown-content.mt-4.me-4.py-2.px-4.border.border-1.border-dark.rounded-2
     = link_to '削除', record_path(@record), class: "text-dark", data: {method: :delete, confirm: '削除しても良いですか？'}
-  .d-flex.justify-content-between.mx-2.mt-3.text-light
+  .d-flex.justify-content-between.mx-2.my-3.text-light
     div
       i.fa.fa-backward.me-2
       = link_to records_path
         span.d-inline-block.link{ style= "color: white" }= t('records.show.back')
     .dropdown.me-2
       i.fa.fa-ellipsis-h
-
   .py-2
     .py-1.px-3
       h4.mb-3= safe_join(@record.theme.split("\n"),tag(:br))
@@ -19,3 +18,6 @@
       p.px-4= @record.created_at.strftime("%Y年 %-m月 %-d日")
       p.text-light.my-2= t('records.show.content')
       p.px-4= safe_join(@record.content.split("\n"),tag(:br))
+
+  / コメントフォーム
+  = render 'comments/form', record: @record, comment: @comment
