--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,7 +1,11 @@
-.container.mx-auto
-  = form_with model: comment, url:[record, comment], id: 'new_comment', return: true do |f|
-    .form-group.mb-3
-      = f.label :content, Comment.human_attribute_name(:content), class: 'mb-2'
-      = f.text_area :content, autofocus: true, class: "form-control", id: "js-new-comment-body"
-    .action
-      = f.submit '作成', class: 'btn btn-outline-light'
+#newRecordModal.modal.fade{ tabindex="-1" }
+  .modal-dialog.modal-lg.modal-dialog-centered{ role="document" }
+    .modal-content
+      = form_with model: comment, url:[record, comment], id: 'new_comment', return: true do |f|
+        .modal-body
+          h5#newRecordModalLabel.mb-3.text-muted= t('records.show.comment_new')
+          .mb-3
+            = f.text_area :content, autofocus: true, class: "form-control", rows: 6
+        .modal-footer
+          = f.submit t('defaults.add'), class: 'btn btn-outline-primary'
+          button.btn.btn-secondary{ type= "button" data-bs-dismiss="modal"}= t('defaults.close')
