--- a/app/views/letters/new.html.slim
+++ b/app/views/letters/new.html.slim
@@ -10,5 +10,5 @@
       = f.label :send_at, Letter.human_attribute_name(:send_at), class: 'mb-2'
       br
       = raw sprintf(f.date_select(:send_at, prompt: "--", use_month_numbers: true, start_year: Date.today.year, end_year: (Date.today >> 12).year, date_separator: '%s'),'年','月')+'日'
-    .action.mb-5
-      = f.submit '作成', class: 'btn btn-outline-light'
+    .action.mb-5.d-flex.justify-content-end
+      = f.submit t('defaults.create'), class: 'btn btn-outline-light'
