--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,11 +1,7 @@
-= javascript_pack_tag 'comments/index'
-
-.bg-white.ms-3.me-4.mb-3.p-2.rounded-3.text-muted{ style= "position: relative" }
-  .comment-dropdown-content.mt-4.me-3.py-2.px-4.border.border-1.border-dark.rounded-2{ id= "#{comment.id}" }
-    = link_to t('defaults.delete'), comment_path(comment), class: "text-dark", data: {method: :delete, confirm: t('defaults.delete_confirm')}
+.bg-white.ms-3.me-4.mb-3.p-2.rounded-3.text-muted{ id= "comment-#{comment.id}" }
   .d-flex.justify-content-between.px-1
     p.mb-0.small= comment.created_at.strftime("%Y年 %-m月 %-d日")
-    .comment-dropdown{ id= "#{comment.id}" }
-      i.fa.fa-ellipsis-h.lh-1
+    = link_to comment_path(comment), class: "text-muted", method: :delete, data: { confirm: t('defaults.delete_confirm')}, remote: true do
+      i.fa.fa-trash
   p#record-border.border-bottom.border-2.rounded.mb-2
-  p.mb-0= safe_join(comment.content.split("\n"),tag(:br))
+  p.mb-2= safe_join(comment.content.split("\n"),tag(:br))
