--- a/app/views/records/_record.html.slim
+++ b/app/views/records/_record.html.slim
@@ -1,7 +1,7 @@
 .bg-white.mb-3.p-3.rounded-3
   .d-flex.justify-content-between.px-1.text-muted
     p.mb-1.small= record.created_at.strftime("%Y年 %-m月 %-d日")
-    = link_to record_path(record), class: "text-muted", data: {method: :delete, confirm: t('defaults.delete_confirm')} do
+    = link_to record_path(record), class: "text-muted", method: :delete, data: { confirm: t('defaults.delete_confirm') } do
       i.fa.fa-trash
   p#record-border.border-bottom.border-2.rounded.mb-2
   = link_to record_path(record)
