--- a/app/views/records/new.html.slim
+++ b/app/views/records/new.html.slim
@@ -6,10 +6,10 @@
         = f.label :tags, Record.human_attribute_name(:tags)
         br
         .ms-3= f.collection_check_boxes :tag_ids, Tag.all, :id, :name, include_hidden: false do |tag|
-            = tag.label class: "form-check-label" do
-              .form-check.me-3
-                = tag.check_box class: "form-check-input"
-                = tag.text
+          = tag.label class: "form-check-label" do
+            .form-check.me-3
+              = tag.check_box class: "form-check-input"
+              = tag.text
       .form-group.mb-3
         = f.label :theme, Record.human_attribute_name(:theme), class: 'mb-2'
         = f.text_area :theme, autofocus: true, class: "form-control", rows: 2
@@ -17,4 +17,5 @@
         = f.label :content, Record.human_attribute_name(:content), class: 'mb-2'
         = f.text_area :content, autofocus: true, class: "form-control", rows: 10
       .action.mb-3.d-flex.justify-content-end
-        = f.submit t('defaults.create'), class: 'btn btn-outline-light'
+        = button_tag type: 'submit', class: 'btn btn-outline-dark' do
+          i.fa.fa-paper-plane-o.fa-lg.m-0.px-3
