--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -4,4 +4,4 @@
     = link_to comment_path(comment), class: "text-muted", method: :delete, data: { confirm: t('defaults.delete_confirm')}, remote: true do
       i.fa.fa-trash
   p#record-border.border-bottom.border-2.rounded.mb-2
-  p.mb-2= safe_join(comment.content.split("\n"),tag(:br))
+  p.small.px-2.mb-1= safe_join(comment.content.split("\n"),tag(:br))
