--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -7,5 +7,8 @@
           .mb-3
             = f.text_area :content, autofocus: true, class: "form-control", rows: 6
         .modal-footer
-          = f.submit t('defaults.add'), class: 'btn btn-outline-primary'
-          button.btn.btn-secondary{ type= "button" data-bs-dismiss="modal"}= t('defaults.close')
+          / = f.submit t('defaults.add'), class: 'btn btn-outline-primary'
+          = button_tag type: 'submit', class: 'btn btn-outline-primary' do
+            i.fa.fa-paper-plane.fa-lg.m-0.p-1
+          button.btn.btn-outline-secondary{ type= "button" data-bs-dismiss="modal"}
+            i.fa.fa-times.fa-lg.m-0.px-1
