Fix：Scope機能で送付状況によって手紙を区別 #17

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -20,8 +20,8 @@
           p.mb-0= t('users.show.sent_letter')
           p.text-dark= t('users.show.letter_unit', count: @letters.sent.count)
         .w-80
-          p.mb-0= t('users.show.not_sent_letter')
-          p.text-dark= t('users.show.letter_unit', count: @letters.not_sent.count)
+          p.mb-0= t('users.show.not_send_letter')
+          p.text-dark= t('users.show.letter_unit', count: @letters.not_send.count)
     .record-field.mb-3
       .text-center.small
         p.mb-0= t('users.show.count')
