--- a/app/views/records/show.html.slim
+++ b/app/views/records/show.html.slim
@@ -1,11 +1,9 @@
-= javascript_pack_tag 'records/show'
-
 .container.mx-auto{ style= "margin-bottom: 92px;" }
   .d-flex.justify-content-between.mx-2.my-3.text-light
     .pt-1
       i.fa.fa-backward.me-2
       = link_to records_path
-        span.d-inline-block.link{ style= "color: white" }= t('records.show.back')
+        span.d-inline-block.link{ style= "color: white" }= t('defaults.index_back')
     = link_to record_path(@record), class: "text-muted pe-2", method: :delete, data: { confirm: t('defaults.delete_confirm') }
       i.fa.fa-trash
   .py-2
