--- a/app/views/records/_record.html.slim
+++ b/app/views/records/_record.html.slim
@@ -9,5 +9,5 @@
   .d-flex.justify-content-start.lh-1.text-muted.mb-2
     i.fa.fa-tags.me-1
     .d-flex.flex-wrap.
-      - record.tags.each do |tag|
-        span.me-2= tag.name
+      - record.categories.each do |category|
+        span.me-2= category.name
