--- a/app/views/records/index.html.slim
+++ b/app/views/records/index.html.slim
@@ -3,8 +3,8 @@
   .container.mx-auto.py-4
     .my-2.d-flex.justify-content-end
       = form_tag records_path, method: :get do
-        = select_tag :tag_id, options_from_collection_for_select(Tag.all, :id, :name, params[:tag_id]),
-          { prompt: t('records.index.select_tag'), onchange: 'submit(this.form);' }
+        = select_tag :category_id, options_from_collection_for_select(Category.all, :id, :name, params[:category_id]),
+          { prompt: t('records.index.select_category'), onchange: 'submit(this.form);' }
     = render @records
   = link_to  new_record_path
     button.btn-original{ type= "button" data-bs-toggle="modal" data-bs-target="#newRecordModal" }
