Add：タグごとで記録の一覧表示ができるように実装 #25

--- a/app/views/records/_record.html.slim
+++ b/app/views/records/_record.html.slim
@@ -13,4 +13,5 @@
         span.me-2= category.name
   .d-flex.flex-wrap.lh-1.mb-2.text-muted
     - record.tags.each do |tag|
-      p.mb-0.me-2.small= "##{tag.name}"
+      = link_to tag_path(tag)
+        p.mb-0.me-2.small= "##{tag.name}"
