--- a/app/views/records/new.html.slim
+++ b/app/views/records/new.html.slim
@@ -1,6 +1,11 @@
-= render 'shared/record_menu'
 .wrapper
+  .bg-light{style= "box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);"}
+    .d-flex.justify-content-start.p-3
+      = link_to records_path
+        i.fa.fa-arrow-left.fa-lg.text-dark.me-3
+      p.text-dark.mb-0= t('defaults.index_back')
   .container.mx-auto.py-4
+    h1.ms-2.mb-4.text-dark= t('records.new.title')
     = form_with model: @record, local: true do |f|
       .form-group.mb-3
         = f.label :categories, Record.human_attribute_name(:categories), class: 'text-danger'
