--- a/app/views/records/show.html.slim
+++ b/app/views/records/show.html.slim
@@ -1,4 +1,4 @@
-.wrapper
+.wrapper-bottom
   .bg-light{style= "box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);"}
     .d-flex.justify-content-start.p-3
       = link_to records_path
@@ -6,7 +6,7 @@
       p.text-dark.mb-0= t('defaults.index_back')
   .container.mx-auto.py-4
     .d-flex.justify-content-between
-      h3.ms-2.mb-4.text-dark= @record.theme
+      h3.ms-2.mb-4.text-dark= @record.title
       = link_to record_path(@record), class: "text-muted me-2", method: :delete, data: { confirm: t('defaults.delete_confirm') }
         i.fa.fa-trash
     .text-left.mx-2.text-dark
@@ -14,14 +14,5 @@
       p.px-4.mb-0= @record.created_at.strftime("%Y年 %-m月 %-d日")
       p.text-light.my-2= t('records.show.content')
       p.px-4.mb-0= safe_join(@record.content.split("\n"),tag(:br))
-      p.text-light.my-2= t('records.show.tag')
-      .d-flex.flex-wrap.px-4.text-muted
-        - @record.tags.each do |tag|
-          p.pe-2.mb-0= "##{tag.name}"
-      p.text-light.my-2= t('records.show.comment_index')
-      #js-comment-area.mb-3
-        = render @comments
       button.btn-original{ type= "button" data-bs-toggle="modal" data-bs-target="#newRecordModal" }
         i.fa.fa-plus-circle.fa-3x
-  / コメントフォーム
-  = render 'comments/form', record: @record, comment: @comment
