--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -26,4 +26,14 @@
       .text-center
         p.mb-0.small= t('users.show.count')
         p.text-dark= t('users.show.record_unit', count: @records.count)
+      .d-flex.justify-content-evenly.px-3.mb-3.text-center
+        .w-80
+          p.mb-0.small= t('users.show.checked_record')
+          p.text-dark= t('users.show.record_unit', count: @records.checked.count)
+        .w-80
+          p.mb-0.small= t('users.show.sent_record')
+          p.text-dark= t('users.show.record_unit', count: @records.sent.count)
+        .w-80
+          p.mb-0.small= t('users.show.not_send_record')
+          p#js-modal-open.text-dark= t('users.show.record_unit', count: @records.not_send.count)
       = link_to t('users.show.records_path'), records_path, class: 'btn btn-outline-dark'
