Add：リマインド機能をさらにクイズ出題&解答機能に変更 #23 #37

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 // @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "header_footer";
+@import "modal";
 
 body {
   background-color: #c2d9fe;
