--- a/app/views/records/new.html.slim
+++ b/app/views/records/new.html.slim
@@ -4,17 +4,14 @@
       = link_to records_path
         i.fa.fa-arrow-left.fa-lg.text-dark.me-3
       p.text-dark.mb-0= t('defaults.index_back')
-  .container.mx-auto.py-4
+  .container.mx-auto.py-4.text-dark
     = form_with model: @record, local: true do |f|
       .form-group.mb-3
-        = f.label :send_at, Record.human_attribute_name(:send_at), class: 'text-danger mb-2'
+        = f.label :send_at, Record.human_attribute_name(:send_at), class: 'mb-2'
         = f.datetime_field :send_at, class: 'form-control', value: (Date.today + 1).strftime('%Y-%m-%dT%T')
       .form-group.mb-3
-        = f.label :title, Record.human_attribute_name(:title), class: 'text-danger mb-2'
-        = f.text_area :title, autofocus: true, class: "form-control", rows: 2, placeholder: t('records.new.title')
-      .form-group.mb-3
-        = f.label :content, Record.human_attribute_name(:content), class: 'text-dark mb-2'
-        = f.text_area :content, autofocus: true, class: "form-control", rows: 10, placeholder: t('records.new.content')
+        = f.label :content, Record.human_attribute_name(:content), class: 'mb-2'
+        = f.text_area :content, autofocus: true, class: "form-control", rows: 3, placeholder: t('records.new.content')
       .action.mb-3.d-flex.justify-content-end
         = button_tag type: 'submit', class: 'btn btn-outline-dark' do
           i.fa.fa-paper-plane-o.fa-lg.m-0.px-3
