--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -32,7 +32,7 @@
           p.text-dark= t('users.show.record_unit', count: @records.checked.count)
         .w-80
           p.mb-0.small= t('users.show.sent_record')
-          p.text-dark= t('users.show.record_unit', count: @records.sent.count)
+          p.text-dark= t('users.show.record_unit', count: @records.sent.where(state: 'sent').count)
         .w-80
           p.mb-0.small= t('users.show.not_send_record')
           p#js-modal-open.text-dark= t('users.show.record_unit', count: @records.not_send.count)
