--- a/app/views/records/sent.html.slim
+++ b/app/views/records/sent.html.slim
@@ -4,6 +4,4 @@
 .wrapper
   .container.mx-auto.py-4
     = render @records
-  = link_to new_record_path
-    button.btn-original{ type= "button" }
-      i.fa.fa-plus-circle.fa-3x
+  = render 'new_btn'
