--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,11 +11,7 @@ body {
 }
 
 .wrapper{
-  margin: 62px 0px;
-}
-
-.wrapper-bottom{
-  margin-bottom: 85px;
+  margin-bottom: 85px
 }
 
 .navbar-dark .navbar-nav .nav-link{
@@ -44,29 +40,8 @@ body {
   text-decoration: underline;
 }
 
-.dropdown, .comment-dropdown{
-  min-width: 0;
-  cursor: pointer;
-
-  &-content{
-    display: none;
-    position: absolute;
-    background-color: #f8f9fa;
-    z-index: 1;
-    text-align: left;
-    text-align: center;
-    right: 0;
-
-    a{
-      opacity: 0.7;
-      text-decoration: none;
-    }
-
-    a:hover{
-      opacity: 1;
-      text-decoration: none;
-    }
-  }
+#sent{
+  display: none;
 }
 
 .btn-original{
