--- a/app/views/records/_new_btn.html.slim
+++ b/app/views/records/_new_btn.html.slim
@@ -5,7 +5,7 @@ button.btn-original.open-new{ type= "button" }
 
 .mask-new
 .modal-new
-  h5.mb-1.text-dark= '未来のあなたへクイズを出題'
+  h5.mb-1.text-dark= t('records.new.title')
   p#record-border.border-bottom.border-2.rounded.mb-2
   .container.mx-auto.mb-4.text-dark
     = form_with url: records_path, remote: true do |f|
