--- a/app/views/records/index.html.slim
+++ b/app/views/records/index.html.slim
@@ -1,6 +1,16 @@
 = render 'shared/record_menu'
-.wrapper
-  .container.mx-auto.py-4
-    = render @records
-  = render 'new_btn'
 
+.wrapper
+  .container.mx-auto.py-4#checked
+    - if !@checked_records.present?
+      h3.text-dark= t('records.index.not_checked')
+    -else
+      - @checked_records.each do |record|
+        = render 'checked_record', record: record
+  .container.mx-auto.py-4#sent
+    - if !@sent_records.present?
+      h3.text-dark= t('records.index.not_sent')
+    - else
+      - @sent_records.each do |record|
+        = render 'sent_record', record: record
+  = render 'new_btn'
