--- a/app/views/shared/_record_menu.html.slim
+++ b/app/views/shared/_record_menu.html.slim
@@ -1,6 +1,6 @@
-.fixed-top.record_header
+= javascript_pack_tag 'records/index'
+
+.record_header
   .d-flex.flex-nowrap.bg-white.mb-0.text
-    = link_to records_path, class: "w-100 text-center py-4 #{record_menu('index')}"
-      p.d-inline-block.small.mb-0= t('shared.record.index')
-    = link_to sent_path, class: "w-100 text-center py-4 #{record_menu('sent')}"
-      p.d-inline-block.small.mb-0= t('shared.record.sent')
+    p.checked.small.mb-0.w-100.border.border-3.rounded-2.text-center.py-4= t('shared.record.index')
+    p.sent.small.mb-0.w-100.text-center.py-4= t('shared.record.sent')
