Add：回答結果のenum表示を修正＆日本語化と出題されて丸一日経ったクイズを「無回答」とする処理を実装 #37

--- a/app/views/records/_checked_record.html.slim
+++ b/app/views/records/_checked_record.html.slim
@@ -17,7 +17,7 @@
     p#record-border.border-bottom.border-2.rounded.mb-2
     p.mb-1.px-1= t('records.index.checked_time', time: time_ago(record.updated_at))
     .d-flex.justify-content-center
-      - if record.result == "correct"
+      - if record.result == "YES"
         h2.text-danger= t('records.index.yes')
       - else
         h2.text-primary= t('records.index.no')
