Add：メニュー選択フッターの作成・コードの整理・日本語化 #41

--- a/app/views/shared/_after_login_footer.html.slim
+++ b/app/views/shared/_after_login_footer.html.slim
@@ -1,8 +1,6 @@
 footer.fixed-bottom
   .d-flex.flex-nowrap.bg-white.mb-0.text
-    = link_to user_path, class: "w-100 text-center py-4 #{footer_menu('users')}"
-      p.d-inline-block.small.mb-0= t('shared.footer.profile')
-    = link_to letters_path, class: "w-100 text-center py-4 #{footer_menu('letters')}"
-      p.d-inline-block.small.mb-0= t('shared.footer.letter')
-    = link_to records_path, class: "w-100 text-center py-4 #{footer_menu('records')}"
-      p.d-inline-block.small.mb-0= t('shared.footer.record')
+    = link_to user_path(current_user), class: "w-100 text-center py-4 #{footer_menu('users')}"
+      p.d-inline-block.small.mb-0= t('shared.footer.events')
+    = link_to new_connpass_path, class: "w-100 text-center py-4 #{footer_menu('connpass')}"
+      p.d-inline-block.small.mb-0= t('shared.footer.setting')
