Fix：Connpass#new, updateの内容をUsers#edit, updateに移行 #41

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -17,3 +17,5 @@
   .after-events-field
     - if !@after_events.nil?
       = render partial: "event", collection: @after_events, as: :event
+
+= render 'shared/after_login_footer'
